--- a/style.css
+++ b/style.css
@@ -1,12 +1,39 @@
 .grid-container
 {
     display: grid;
-    grid-template-columns: repeat(15, 2fr);
-    background-color: blueviolet;
-    width: 100%;
+    grid-template-columns: repeat(16, 1fr);
+    grid-template-rows: repeat(5, auto);
 }
 
-.grid-container div
+#grass1
 {
-    background-color: blueviolet;
+    background-color: rgba(23, 175, 9, 0.785);
+    height: 150px;
+}
+
+#grass2
+{
+    background-color: rgba(55, 216, 41, 0.785);
+    height: 150px;
+}
+
+#line
+{
+    background-color: rgba(0, 0, 0, 0.785);
+    height: 150px;
+    
+}
+
+#inner-line
+{
+    background-color: rgba(0, 0, 0, 0.785);
+    height: 75px;
+    width: 5px;
+}
+
+img
+{
+    width: 0px;
+    height: 0px;
+    object-fit: cover;
 }
