--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     grid-template-columns: repeat(5, 1fr) repeat(1, 2fr) repeat(1, 0.3fr) repeat(1, 2fr) repeat(1, 0.3fr) repeat(1, 2fr) repeat(5, 1fr);
     grid-template-rows: repeat(5, 1fr);
     position: relative;
-    
+
     justify-content: center;
 }
 
@@ -32,6 +32,8 @@
 
 #inner-line
 {
+    display: flex;
+    flex-direction: column;
     background-color: rgba(0, 0, 0, 0.785);
     height: 75px;
     width: 7px;
@@ -44,21 +46,30 @@
     object-fit: cover;
 }
 
-#ImageMain
+#GameContainer {
+    position: relative;
+    width: 100%;
+    height: 100px;
+    overflow: hidden;
+  }
+  
+  #ImageMain 
 {
-    margin: 0 auto;
+    position: absolute; /* Required for 'left' to work */
+    top: 50%; /* Center vertically */
+    left: 50%; /* Start in the middle */
+    transform: translate(-50%, -50%); /* Center the car */
     height: 125px;
     width: 105px;
-    position: absolute;
-    background-color: red;
+    /* background-color: red; For visibility during testing */
+    z-index: 1000000;
 }
 
-#RightLane, #MiddleLane, #LeftLane
-{
-    position: relative;
-    width: 2fr;
-    height: 2fr;
-    justify-content: center;
+#RightLane, #MiddleLane, #LeftLane {
+    position: relative; /* Required for child elements to move within */
+    width: 200px; /* Each lane takes up one-third of the screen */
+    height: 100%; /* Full height of the screen */
+    float: left; /* Align lanes horizontally */
 }
 
 #inner-lane
@@ -105,7 +116,7 @@ body
     height: 120px;
     width: 120px;
     position: relative;
-    background-color: red;
+    /* background-color: red; */
     
 }
 
