--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@
 {
     position: absolute; /* Required for 'left' to work */
     top: 50%; /* Center vertically */
-    left: 50%; /* Start in the middle */
+    left: 50% ease; /* Start in the middle */
     transform: translate(-50%, -50%); /* Center the car */
     height: 125px;
     width: 105px;
