--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ body
     height: 120px;
     width: 120px;
     position: relative;
-    /* background-color: red;  */
+    background-color: red;
     
 }
 
